--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
     </div>
     <script src="./js/index.js"></script>
+    <script src="./js/test.js"></script>
 </body>
 
 </html>
